--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 #config db
-#spring.datasource.jdbcUrl=jdbc:mysql://localhost:3306/employee_directory?useSSL=false
-spring.datasource.jdbcUrl=jdbc:mysql://db4free.net:3306/guillermodb?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.jdbcUrl=jdbc:mysql://localhost:3306/employee_directory?useSSL=false
+#spring.datasource.jdbcUrl=jdbc:mysql://db4free.net:3306/guillermodb?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.datasource.username=guillermo
-spring.datasource.password=gaalpexx
+#spring.datasource.username=guillermo
+#spring.datasource.password=gaalpexx
 
-#spring.datasource.username=root
-#spring.datasource.password=admin
+spring.datasource.username=root
+spring.datasource.password=admin
 
 #jsp
 spring.mvc.view.prefix=/WEB-INF/jsp/
